<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre Completo</string>
    <string name="fechaN">Fecha de Nacimiento</string>
    <string name="tel">Telefono</string>
    <string name="correo">Email</string>
    <string name="descripcionContac">Descripción Contacto</string>
    <string name="btnTexto">Siguiente</string>
    <string name="btnEditar">Editar Datos</string>
    <string name="tvConfirDatos">Confirmar Datos</string>
    <string name="tvNombre">Nombre Completo : </string>
    <string name="tvFechaN">Fecha de Nacimiento : </string>
    <string name="tvTel">Telefono : </string>
    <string name="tvCorreo">Email</string>
    <string name="tvDescripcionContac">Descripción Contacto :</string>
</resources>